src/App.css
*{
  padding: 0;
  margin: 0;
}
body{
  font-family: karla;
  background: #0B2434;
}
.main-container{
  height: 100vh;
  padding: 0 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.container{
  width: 70vh;
  height: 70vh;
  background: #F5F5F5;
  border-radius: 10px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}
.dice{
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  width: 36px;
  height: 36px;
  cursor: pointer;
}
.dice-container{
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 20px;
}
.roll-button{
    height: 50px;
    width: 120px;
    border: none;
    border-radius: 6px;
    background-color: #5035FF;
    color: white;
    font-size: 1.2rem;
    font-family: 'Karla', sans-serif;
}
.roll-button:active {
  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
}
.information{
  font-family: 'Inter';
  font-weight: 400;
  color: #4A4E74;
  width: 40vh;
}

